feat: start adding cva

--- a/components/shared/installation-guide.mdx
+++ b/components/shared/installation-guide.mdx
@@ -4,7 +4,7 @@ import { SCRIPTS_TABS }from '@root/constants'
 
 ## Instalation
 
-This component is part of the `@creation-ui/react` package. To install it just run:
+This component is part of the main `@creation-ui/react` package. To install it just run:
 
 <Tabs items={SCRIPTS_TABS}>
   <Tab>
