--- a/pages/docs/components/autocomplete.mdx
+++ b/pages/docs/components/autocomplete.mdx
@@ -20,7 +20,7 @@ import { SCRIPTS_TABS } from '../../../constants'
 ## Basic usage example
 
 ```tsx copy
-import { Autocomplete } from '@creation-ui/autocomplete'
+import { Autocomplete } from '@creation-ui/react'
 
 const [Autocompleteion, setAutocompleteion] = useState<Option | never>()
 
