--- a/pages/docs/components/box.mdx
+++ b/pages/docs/components/box.mdx
@@ -1,14 +1,11 @@
-# Box
-
 import PropsTable from '@components/props-table'
 import { Container } from '@components/container'
+import { Box, Button } from '@creation-ui/react'
 
-import { Box } from '@creation-ui/react'
-import { Button } from '@creation-ui/button'
+# Box
 
 ```tsx copy
-import { Box } from '@creation-ui/react'
-import { Button } from '@creation-ui/button'
+import { Box, Button } from '@creation-ui/react'
 
 const Example = () => (
   <Box>
