--- a/pages/docs/components/button-group.mdx
+++ b/pages/docs/components/button-group.mdx
@@ -1,7 +1,12 @@
+import { Button, ButtonGroup, Icon } from '@creation-ui/react'
+import { Container, properties } from '@components/container'
+import { ButtonGroupExample } from '@examples/button-group'
+import PropsTable from '@components/props-table'
+
 # Button Group
 
 ```tsx copy
-import { Button, ButtonProps, ButtonGroup } from '@creation-ui/button'
+import { Button, ButtonProps, ButtonGroup } from '@creation-ui/react'
 
 interface ButtonGroupExampleProps {
   options?: string[]
@@ -21,12 +26,6 @@ export const ButtonGroupExample = ({
   )
 }
 ```
-
-import { Button, ButtonGroup } from '@creation-ui/button'
-import { Icon } from '@creation-ui/react'
-import { Container, properties } from '@components/container'
-import { ButtonGroupExample } from '@examples/button-group'
-import PropsTable from '@components/props-table'
 
 `div` wrapper for buttons.
 
