--- a/pages/docs/components/dark-mode-toggle.mdx
+++ b/pages/docs/components/dark-mode-toggle.mdx
@@ -4,9 +4,9 @@ import { Container } from '@components/container'
 
 Toggle for changing the theme of the application
 
-import PartOfCore from '@components/shared/part-of-core.mdx'
+import InstallationGuide from '@components/shared/installation-guide.mdx'
 
-<PartOfCore />
+<InstallationGuide />
 
 ## Usage
 
