--- a/pages/docs/components/dropdown-chevron.mdx
+++ b/pages/docs/components/dropdown-chevron.mdx
@@ -2,14 +2,14 @@
 
 Used in dropdowns to open options list.
 
-import PartOfCore from '@components/shared/part-of-core.mdx'
+import InstallationGuide from '@components/shared/installation-guide.mdx'
 
-<PartOfCore />
+<InstallationGuide />
 
 ## Usage
 
 ```tsx copy
-import { Button } from '@creation-ui/button'
+import { Button } from '@creation-ui/react'
 import { DropdownChevron } from '@creation-ui/react'
 import { useState } from 'react'
 
