--- a/pages/docs/components/error-text.mdx
+++ b/pages/docs/components/error-text.mdx
@@ -4,9 +4,9 @@ import { Container } from '@components/container'
 
 Used in inputs to display an error message. When content is falsy then it won't be displayed.
 
-import PartOfCore from '@components/shared/part-of-core.mdx'
+import InstallationGuide from '@components/shared/installation-guide.mdx'
 
-<PartOfCore />
+<InstallationGuide />
 
 ## Usage
 
