--- a/pages/docs/components/loading-overlay.mdx
+++ b/pages/docs/components/loading-overlay.mdx
@@ -6,9 +6,10 @@ import { ELEMENT_SIZES } from '@creation-ui/react'
 # LoadingOverlay
 
 Animated spinner for loading states.
-import PartOfCore from '@components/shared/part-of-core.mdx'
 
-<PartOfCore />
+import InstallationGuide from '@components/shared/installation-guide.mdx'
+
+<InstallationGuide />
 
 
 ```tsx copy
@@ -17,7 +18,7 @@ import { LoadingOverlay } from '@creation-ui/react'
 <LoadingOverlay />
 ```
 
-## Toggling `active` state
+## Showing the overlay
 
 <LoadingOverlayExample />
 
