--- a/pages/docs/components/progress-bar.mdx
+++ b/pages/docs/components/progress-bar.mdx
@@ -11,7 +11,7 @@ export const list = ListOrTypes([...ELEMENT_POSITION])
 # ProgressBar
 
 ```tsx copy
-import { ProgressBar } from '@creation-ui/progress-bar'
+import { ProgressBar } from '@creation-ui/react'
 
 export const ProgressBarExample = ({ ...props }: ProgressBarProps) => {
   return <ProgressBar {...props} />
