--- a/pages/docs/components/select-option.mdx
+++ b/pages/docs/components/select-option.mdx
@@ -1,4 +1,4 @@
-import PartOfCore from '@components/shared/part-of-core.mdx'
+import InstallationGuide from '@components/shared/installation-guide.mdx'
 import { SelectOption, SelectOptionsType } from '@creation-ui/react'
 import { properties, option } from '@examples/select-option'
 import PropsTable from '@components/props-table'
@@ -7,7 +7,7 @@ import PropsTable from '@components/props-table'
 
 Dropdown option component
 
-<PartOfCore />
+<InstallationGuide />
 
 ## States and variants
 
