--- a/pages/docs/components/theme.mdx
+++ b/pages/docs/components/theme.mdx
@@ -16,9 +16,9 @@ import {
 
 Theme Provider
 
-import PartOfCore from '@components/shared/part-of-core.mdx'
+import InstallationGuide from '@components/shared/installation-guide.mdx'
 
-<PartOfCore />
+<InstallationGuide />
 
 ## Usage
 
