--- a/pages/docs/index.mdx
+++ b/pages/docs/index.mdx
@@ -22,38 +22,16 @@ To start using Creation UI, you can select which components you want to use and 
 - Theme
 - DarkModeToggle
 
-## Packages
-
-- @creation-ui/react
-- @creation-ui/input
-- @creation-ui/avatar
-- @creation-ui/button
-- @creation-ui/switch
-- @creation-ui/radio
-- @creation-ui/autocomplete
-- @creation-ui/select
-- @creation-ui/modal
-- @creation-ui/drawer
-- @creation-ui/tooltip
-- @creation-ui/date-time
-
-### PRO
-
-- @creation-ui/transfer-list WIP
-- @creation-ui/table WIP
-
 ### WIP
 
-- @creation-ui/menu
-- @creation-ui/layout
-- @creation-ui/context-menu
-- @creation-ui/accordion
-- @creation-ui/progress-bar
-- @creation-ui/info-bar
-- @creation-ui/schedule
-- @creation-ui/timeline
-- @creation-ui/breadcrumbs
-- @creation-ui/typography
+- menu
+- layout
+- context-menu
+- accordion
+- info-bar
+- schedule
+- timeline
+- breadcrumbs
 
 ### With Material Icons
 
