--- a/pages/docs/quick-start.mdx
+++ b/pages/docs/quick-start.mdx
@@ -5,11 +5,11 @@
 Let's install basic components with the prerequisite `core` library. Run the following command:
 
 ```bash copy
- npm install @creation-ui/react @creation-ui/button
+ npm install @creation-ui/react
 ```
 
 ```bash copy
- yarn add @creation-ui/react @creation-ui/button
+ yarn add @creation-ui/react
 ```
 
 ## Usage
@@ -21,8 +21,7 @@ import React, { useState } from 'react'
 import '@creation-ui/react/dist/index.css'
 
 // import components
-import { Button } from '@creation-ui/button'
-import { Icon } from '@creation-ui/react'
+import { Button, Icon } from '@creation-ui/react'
 
 export const QuickStartExample = () => {
   const [clicks, setClicks] = useState(0)
