--- a/pages/docs/components/clear-button.mdx
+++ b/pages/docs/components/clear-button.mdx
@@ -4,9 +4,9 @@ import { Container } from '@components/container'
 
 Used in dropdowns to clear input content.
 
-import PartOfCore from '@components/shared/part-of-core.mdx'
+import InstallationGuide from '@components/shared/installation-guide.mdx'
 
-<PartOfCore />
+<InstallationGuide />
 
 ## Usage
 
