--- a/pages/docs/components/drawer.mdx
+++ b/pages/docs/components/drawer.mdx
@@ -1,8 +1,7 @@
-import { Drawer } from '@creation-ui/drawer'
 import { Container } from '@components/container'
 import { properties, DrawerExample } from '@examples/drawer'
 import { UnfoldVariants } from '@components/unfold-variants'
-import { ELEMENT_POSITION, ELEMENT_SIZES } from '@creation-ui/react'
+import { ELEMENT_POSITION, ELEMENT_SIZES, Drawer } from '@creation-ui/react'
 import PropsTable from '@components/props-table'
 import { ListOrTypes } from 'utils/list-or-types'
 
@@ -12,7 +11,7 @@ export const list = ListOrTypes([...ELEMENT_POSITION])
 
 ```tsx copy
 import { Drawer } from '@creation-ui/drawer'
-import { Button } from '@creation-ui/button'
+import { Button } from '@creation-ui/react'
 
 export const DrawerExample = (props: DrawerProps) => {
   const [open, setOpen] = useState(false)
