--- a/pages/docs/components/loader.mdx
+++ b/pages/docs/components/loader.mdx
@@ -1,14 +1,15 @@
 # Loader
 
 Animated spinner for loading states
-import PartOfCore from '@components/shared/part-of-core.mdx'
 
-<PartOfCore />
+import InstallationGuide from '@components/shared/installation-guide.mdx'
+
+<InstallationGuide />
 
 import { LoaderExample, properties } from '@examples/loader'
 import PropsTable from '@components/props-table'
 import { UnfoldVariants } from '@components/unfold-variants'
-import { ELEMENT_SIZES } from '@creation-ui/react'
+import { ELEMENT_SIZES } from '@creation-ui/react/types'
 
 ```tsx copy
 import { Loader } from '@creation-ui/react'
