--- a/pages/docs/components/status-badge.mdx
+++ b/pages/docs/components/status-badge.mdx
@@ -1,6 +1,6 @@
 # Status Badge
 
-import { StatusBadge } from '@creation-ui/status-badge'
+import { StatusBadge } from '@creation-ui/react'
 import { Container } from '@components/container'
 import { UnfoldVariants } from '@components/unfold-variants'
 import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/react'
@@ -8,7 +8,7 @@ import PropsTable from '@components/props-table'
 import { properties } from '@examples/status-badge'
 
 ```tsx copy
-import { StatusBadge } from '@creation-ui/status-badge'
+import { StatusBadge } from '@creation-ui/react'
 
 <StatusBadge status='success' />
 ```
