feat: add documentation for components

--- a/pages/docs/components/checkbox.mdx
+++ b/pages/docs/components/checkbox.mdx
@@ -3,7 +3,7 @@
 import { CheckboxExample } from '@examples/checkbox'
 import { Container } from '@components/container'
 import { UnfoldVariants } from '@components/unfold-variants'
-import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/react'
+import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/react/types'
 import PropsTable from '@components/props-table'
 import { properties } from '@examples/checkbox'
 
@@ -20,7 +20,7 @@ export const CheckboxComponet = ({
 ```
 
 <Container>
-  <CheckboxExample />
+  <CheckboxExample label="Yes, I like cookies"/>
 </Container>
 
 ## Sizes
