--- a/pages/docs/components/date-picker.mdx
+++ b/pages/docs/components/date-picker.mdx
@@ -36,8 +36,8 @@ export const DatePickerExample = ({ ...props }: DatePickerProps) => {
 ## Component API
 
 <Callout>
-  To lookup the rest of the component props see [React Stick
-  docs](https://github.com/signavio/react-stick)
+  To lookup the rest of the component props see [React Datepicker
+  docs](https://reactdatepicker.com/)
 </Callout>
 
 <PropsTable
