--- a/pages/docs/components/modal.mdx
+++ b/pages/docs/components/modal.mdx
@@ -1,7 +1,8 @@
 import { Container } from '@components/container'
 import { properties, ModalExample } from '@examples/modal'
 import { UnfoldVariants } from '@components/unfold-variants'
-import { ELEMENT_POSITION, ELEMENT_SIZES, Modal } from '@creation-ui/react'
+import { ELEMENT_POSITION, ELEMENT_SIZES } from '@creation-ui/react/types'
+import { Modal } from '@creation-ui/react'
 import PropsTable from '@components/props-table'
 import { ListOrTypes } from 'utils/list-or-types'
 
@@ -42,7 +43,6 @@ export const ModalExample = (props: ModalProps) => {
 <Container>
   <ModalExample />
 </Container>
-
 
 ## Component API
 
