--- a/pages/docs/components/radio-group.mdx
+++ b/pages/docs/components/radio-group.mdx
@@ -1,24 +1,49 @@
 # Radio Group
 
-import { RadioExample } from '@examples/radio'
+import { RadioGroupExample, properties } from '@examples/radio-group'
 import { Container } from '@components/container'
 import { UnfoldVariants } from '@components/unfold-variants'
-import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/react'
+import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/react/types'
 import PropsTable from '@components/props-table'
-import { properties } from '@examples/Radio'
+
+Simple container for list of single-choice options
 
 ```tsx copy
-import { Radio, RadioProps } from '@creation-ui/react'
+import { useState } from 'react'
+import { Radio, RadioGroup, RadioGroupProps } from '@creation-ui/react'
 
-export const RadioComponet = ({ ...props }: Omit<RadioProps, 'onChange'>) => {
-  const [checked, setChecked] = useState<boolean>(false)
+export const RadioGroupExample = ({ size }: RadioGroupProps) => {
+  const [selected, setSelected] = useState<string>('music')
 
-  return <Radio onChange={setChecked} checked={checked} {...props} />
+  const options = [
+    { label: 'Music', value: 'music' },
+    { label: 'Games', value: 'games' },
+    { label: 'Sports', value: 'sports' },
+    { label: 'Eating', value: 'eating' },
+    { label: 'Coding', value: 'coding' },
+    { label: 'Sleeping', value: 'sleeping' },
+  ]
+
+  const handleClick = e => setSelected(e.target.value)
+
+  return (
+    <RadioGroup size={size} label='Select your favorite activities'>
+      {options.map(option => (
+        <Radio
+          size={size}
+          label={option.label}
+          onClick={handleClick}
+          value={option.value}
+          checked={selected === option.value}
+        />
+      ))}
+    </RadioGroup>
+  )
 }
 ```
 
 <Container>
-  <RadioExample label='Radio option' />
+  <RadioGroupExample label='Radio option' />
 </Container>
 
 ## Sizes
@@ -26,19 +51,11 @@ export const RadioComponet = ({ ...props }: Omit<RadioProps, 'onChange'>) => {
 This component supports `size` prop with values `sm`, `md`, `lg`:
 
 <UnfoldVariants
-  component={RadioExample}
+  component={RadioGroupExample}
   variants={ELEMENT_SIZES}
   prop='size'
   nameProp='label'
 />
-
-## States
-
-<Container>
-  <RadioExample disabled label='Disabled' />
-  <RadioExample required label='Required' />
-  <RadioExample readOnly label='Read only' />
-</Container>
 
 ## Component API
 
