--- a/pages/docs/components/avatar.mdx
+++ b/pages/docs/components/avatar.mdx
@@ -1,11 +1,7 @@
 # Avatar
 
-import {
-  Avatar,
-  AVATAR_VARIANTS,
-  ELEMENT_SIZES,
-  ELEMENT_STATUS,
-} from '@creation-ui/react'
+import { Avatar, AVATAR_VARIANTS } from '@creation-ui/react'
+import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/react/types'
 import { Container } from '@components/container'
 import { UnfoldVariants } from '@components/unfold-variants'
 import PropsTable from '@components/props-table'
