--- a/pages/docs/components/drawer.mdx
+++ b/pages/docs/components/drawer.mdx
@@ -1,7 +1,8 @@
 import { Container } from '@components/container'
 import { properties, DrawerExample } from '@examples/drawer'
 import { UnfoldVariants } from '@components/unfold-variants'
-import { ELEMENT_POSITION, ELEMENT_SIZES, Drawer } from '@creation-ui/react'
+import { ELEMENT_POSITION, ELEMENT_SIZES } from '@creation-ui/react/types'
+import { Drawer } from '@creation-ui/react'
 import PropsTable from '@components/props-table'
 import { ListOrTypes } from 'utils/list-or-types'
 
@@ -43,6 +44,15 @@ export const DrawerExample = (props: DrawerProps) => {
 
 <Container>
   <DrawerExample />
+</Container>
+<Container>
+  <DrawerExample position='left' />
+</Container>
+<Container>
+  <DrawerExample position='top' />
+</Container>
+<Container>
+  <DrawerExample position='bottom' />
 </Container>
 
 ## Component API
