--- a/pages/docs/components/status-badge.mdx
+++ b/pages/docs/components/status-badge.mdx
@@ -3,7 +3,7 @@
 import { StatusBadge } from '@creation-ui/react'
 import { Container } from '@components/container'
 import { UnfoldVariants } from '@components/unfold-variants'
-import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/react'
+import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/react/types'
 import PropsTable from '@components/props-table'
 import { properties } from '@examples/status-badge'
 
