--- a/pages/docs/components/tooltip.mdx
+++ b/pages/docs/components/tooltip.mdx
@@ -2,7 +2,7 @@ import { Tooltip } from '@creation-ui/react'
 import { Container } from '@components/container'
 import { properties, TooltipExample } from '@examples/tooltip'
 import { UnfoldVariants } from '@components/unfold-variants'
-import { ELEMENT_POSITION, ELEMENT_SIZES } from '@creation-ui/react'
+import { ELEMENT_POSITION, ELEMENT_SIZES } from '@creation-ui/react/types'
 import PropsTable from '@components/props-table'
 import { ListOrTypes } from 'utils/list-or-types'
 import { Callout } from 'nextra-theme-docs'
