feat: update descriptions

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -12,7 +12,7 @@ import { Features, Feature } from '../components/features'
 <div className="flex flex-col place-items-center h-[90vh]">
   <div className="max-w-6xl">
     <div className="content-container">
-      <h1 className="headline">Make beautiful websites <br className='sm:block hidden'/>with tailwind components</h1>
+      <h1 className="headline">Make beautiful websites <br className='sm:block hidden'/>with Creation UI</h1>
       <p className="subtitle">Simple, powerful and flexible design system.</p>
       <p className="subtitle"><Link href="/docs">Start →</Link></p>
     </div>
@@ -21,7 +21,9 @@ import { Features, Feature } from '../components/features'
     <div className="content-container">
       <Features>
         <Feature large centered id="docs-card">
-          <h3>Full-power documentation <br className="show-on-mobile"/>in minutes.</h3>
+          <h3>
+            Unlock the potential of your digital products with Creation UI design system.
+          </h3>
         </Feature>
       </Features>
     </div>
