build: fix build errors

--- a/pages/docs/components/button-group.mdx
+++ b/pages/docs/components/button-group.mdx
@@ -1,8 +1,8 @@
 import { Button, ButtonGroup } from '@creation-ui/react'
-import { Container, properties } from '@components/container'
-import { ButtonGroupExample } from '@examples/button-group'
+import { Container } from '@components/container'
+import { ButtonGroupExample, properties } from '@examples/button-group'
 import PropsTable from '@components/props-table'
-import Icon from '@mdi/react'
+import { Icon } from '@mdi/react'
 import {
   mdiFormatAlignCenter,
   mdiFormatAlignLeft,
