--- a/pages/docs/components/button.mdx
+++ b/pages/docs/components/button.mdx
@@ -2,14 +2,15 @@ import { Button } from '@creation-ui/react'
 import { Container } from '@components/container'
 import { properties } from '@examples/button'
 import PropsTable from '@components/props-table'
-import Icon from '@mdi/react'
+import { Icon } from '@mdi/react'
 import { mdiAccountCircle } from '@mdi/js'
 
 # Button
 
 ```tsx copy
 import { Button } from '@creation-ui/react'
-;<Button size='md'>Click me</Button>
+
+<Button>Click me</Button>
 ```
 
 <Container>
