--- a/pages/docs/components/radio.mdx
+++ b/pages/docs/components/radio.mdx
@@ -5,7 +5,7 @@ import { Container } from '@components/container'
 import { UnfoldVariants } from '@components/unfold-variants'
 import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/react'
 import PropsTable from '@components/props-table'
-import { properties } from '@examples/Radio'
+import { properties } from '@examples/radio'
 
 ```tsx copy
 import { Radio, RadioProps } from '@creation-ui/react'
