--- a/pages/docs/components/toggle-group.mdx
+++ b/pages/docs/components/toggle-group.mdx
@@ -13,7 +13,7 @@ import PropsTable from '@components/props-table'
 ```tsx copy
 import { ToggleGroup, ToggleGroupProps } from '@creation-ui/react'
 import { mdiAbacus, mdiAlarm, mdiBedQueenOutline } from '@mdi/js'
-import Icon from '@mdi/react'
+import { Icon } from '@mdi/react'
 
 export const ToggleGroupExample = ({ size }: ToggleGroupProps) => {
   const options = [
