fix: autocomplete casing

--- a/pages/docs/components/autocomplete.mdx
+++ b/pages/docs/components/autocomplete.mdx
@@ -27,7 +27,7 @@ import {
   AutocompleteOptionType,
   AutocompleteOptionComponent,
   AutocompleteMultipleExample,
-} from '@examples/Autocomplete'
+} from '@examples/autocomplete'
 import PropsTable from '@components/props-table'
 import { Description } from '@components/typography'
 
