--- a/pages/docs/components/avatar.mdx
+++ b/pages/docs/components/avatar.mdx
@@ -9,7 +9,7 @@ import {
   properties,
   badgeProperties,
   placementProperties,
-} from '@examples/avatar'
+} from '@components/examples/avatar'
 
 ```tsx copy
 import { Avatar } from '@creation-ui/react'
