--- a/pages/docs/components/button-group.mdx
+++ b/pages/docs/components/button-group.mdx
@@ -1,6 +1,6 @@
 import { Button, ButtonGroup } from '@creation-ui/react'
 import { Container } from '@components/container'
-import { ButtonGroupExample, properties } from '@examples/button-group'
+import { ButtonGroupExample, properties } from '@components/examples/button-group'
 import PropsTable from '@components/props-table'
 import { Icon } from '@mdi/react'
 import {
