--- a/pages/docs/components/button.mdx
+++ b/pages/docs/components/button.mdx
@@ -1,11 +1,13 @@
+# Button
+
+
 import { Button } from '@creation-ui/react'
 import { Container } from '@components/container'
-import { properties } from '@examples/button'
+import { properties } from '@components/examples/button'
 import PropsTable from '@components/props-table'
 import { Icon } from '@mdi/react'
 import { mdiAccountCircle } from '@mdi/js'
 
-# Button
 
 ```tsx copy
 import { Button } from '@creation-ui/react'
