--- a/pages/docs/components/checkbox.mdx
+++ b/pages/docs/components/checkbox.mdx
@@ -1,11 +1,11 @@
 # Checkbox
 
-import { CheckboxExample } from '@examples/checkbox'
+import { CheckboxExample } from '@components/examples/checkbox'
 import { Container } from '@components/container'
 import { UnfoldVariants } from '@components/unfold-variants'
 import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/react'
 import PropsTable from '@components/props-table'
-import { properties } from '@examples/checkbox'
+import { properties } from '@components/examples/checkbox'
 
 ```tsx copy
 import { Checkbox, CheckboxProps } from '@creation-ui/Checkbox'
