--- a/pages/docs/components/error-text.mdx
+++ b/pages/docs/components/error-text.mdx
@@ -18,13 +18,13 @@ import { ErrorText } from '@creation-ui/react'
 />
 ```
 
-import { ErrorTextExample } from '@examples/error-text'
+import { ErrorTextExample } from '@components/examples/error-text'
 
 <ErrorTextExample />
 
 ## Component API
 
-import { properties } from '@examples/error-text'
+import { properties } from '@components/examples/error-text'
 import PropsTable from '@components/props-table'
 
 <PropsTable
