--- a/pages/docs/components/loader.mdx
+++ b/pages/docs/components/loader.mdx
@@ -6,7 +6,7 @@ import InstallationGuide from '@components/shared/installation-guide.mdx'
 
 <InstallationGuide />
 
-import { LoaderExample, properties } from '@examples/loader'
+import { LoaderExample, properties } from '@components/examples/loader'
 import PropsTable from '@components/props-table'
 import { UnfoldVariants } from '@components/unfold-variants'
 import { ELEMENT_SIZES } from '@creation-ui/react'
