--- a/pages/docs/components/radio-group.mdx
+++ b/pages/docs/components/radio-group.mdx
@@ -1,6 +1,6 @@
 # Radio Group
 
-import { RadioGroupExample, properties } from '@examples/radio-group'
+import { RadioGroupExample, properties } from '@components/examples/radio-group'
 import { Container } from '@components/container'
 import { UnfoldVariants } from '@components/unfold-variants'
 import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/react'
