--- a/pages/docs/components/radio.mdx
+++ b/pages/docs/components/radio.mdx
@@ -1,11 +1,11 @@
 # Radio
 
-import { RadioExample } from '@examples/radio'
+import { RadioExample } from '@components/examples/radio'
 import { Container } from '@components/container'
 import { UnfoldVariants } from '@components/unfold-variants'
 import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/react'
 import PropsTable from '@components/props-table'
-import { properties } from '@examples/radio'
+import { properties } from '@components/examples/radio'
 
 ```tsx copy
 import { Radio, RadioProps } from '@creation-ui/react'
