--- a/pages/docs/components/select-option.mdx
+++ b/pages/docs/components/select-option.mdx
@@ -1,6 +1,6 @@
 import InstallationGuide from '@components/shared/installation-guide.mdx'
 import { SelectOption, SelectOptionsType } from '@creation-ui/react'
-import { properties, option } from '@examples/select-option'
+import { properties, option } from '@components/examples/select-option'
 import PropsTable from '@components/props-table'
 
 # SelectOption
@@ -24,7 +24,7 @@ Component will always take up all available width as it has class `w-full`.
 
 ## Component API
 
-import { selectOptionType, selectOptionComponent } from '@examples/select'
+import { selectOptionType, selectOptionComponent } from '@components/examples/select'
 
 <PropsTable
   properties={selectOptionComponent}
