--- a/pages/docs/components/select.mdx
+++ b/pages/docs/components/select.mdx
@@ -27,7 +27,7 @@ import {
   selectOptionType,
   selectOptionComponent,
   SelectMultipleExample,
-} from '@examples/select'
+} from '@components/examples/select'
 import PropsTable from '@components/props-table'
 import { Description } from '@components/typography'
 
