--- a/pages/docs/components/status-badge.mdx
+++ b/pages/docs/components/status-badge.mdx
@@ -5,7 +5,7 @@ import { Container } from '@components/container'
 import { UnfoldVariants } from '@components/unfold-variants'
 import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/react'
 import PropsTable from '@components/props-table'
-import { properties } from '@examples/status-badge'
+import { properties } from '@components/examples/status-badge'
 
 ```tsx copy
 import { StatusBadge } from '@creation-ui/react'
