--- a/pages/docs/components/switch.mdx
+++ b/pages/docs/components/switch.mdx
@@ -1,11 +1,11 @@
 # Switch
 
-import { SwitchExample } from '@examples/switch'
+import { SwitchExample } from '@components/examples/switch'
 import { Container } from '@components/container'
 import { UnfoldVariants } from '@components/unfold-variants'
 import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/react'
 import PropsTable from '@components/props-table'
-import { properties } from '@examples/switch'
+import { properties } from '@components/examples/switch'
 
 ```tsx copy
 import { Switch, SwitchProps } from '@creation-ui/react'
