--- a/pages/docs/components/textarea.mdx
+++ b/pages/docs/components/textarea.mdx
@@ -1,6 +1,6 @@
 # TextArea
 
-import { TextAreaExample, properties } from '@examples/textarea'
+import { TextAreaExample, properties } from '@components/examples/textarea'
 import { Container } from '@components/container'
 import { UnfoldVariants } from '@components/unfold-variants'
 import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/react'
@@ -87,4 +87,4 @@ This component supports `size` prop with values `sm`, `md`, `lg`:
     </>
   }
 />
-```
+
