--- a/pages/docs/components/theme.mdx
+++ b/pages/docs/components/theme.mdx
@@ -10,7 +10,7 @@ import {
   zIndexProps,
   headingConfigProps,
   ThemeExampleValues,
-} from '@examples/theme'
+} from '@components/examples/theme'
 
 # Theme
 
