--- a/pages/docs/components/toggle-group.mdx
+++ b/pages/docs/components/toggle-group.mdx
@@ -4,7 +4,7 @@ import {
   ToggleGroupExample,
   properties,
   optionProps,
-} from '@examples/toggle-group'
+} from '@components/examples/toggle-group'
 import { Container } from '@components/container'
 import { UnfoldVariants } from '@components/unfold-variants'
 import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/react'
