--- a/pages/docs/components/date-picker.mdx
+++ b/pages/docs/components/date-picker.mdx
@@ -1,15 +1,17 @@
+# DatePicker
+
+DatePicker component just styling around [React Datepicker package](https://reactdatepicker.com/).
+Please refer to the [docs](https://reactdatepicker.com/) on how to use it
+
+
 import { Container } from '@components/container'
-import { properties, DatePickerExample } from '@examples/date-picker'
+import { properties, DatePickerExample } from '@components/examples/date-picker'
 import { UnfoldVariants } from '@components/unfold-variants'
 import { ELEMENT_POSITION, ELEMENT_SIZES } from '@creation-ui/react'
 import PropsTable from '@components/props-table'
 import { ListOrTypes } from 'utils/list-or-types'
 import { Callout } from 'nextra-theme-docs'
 
-# DatePicker
-
-DatePicker component just styling around [React Datepicker package](https://reactdatepicker.com/).
-Please refer to the [docs](https://reactdatepicker.com/) on how to use it
 
 ```tsx copy
 import { DatePicker, DatePickerProps } from '@creation-ui/date-picker'
