--- a/pages/docs/components/drawer.mdx
+++ b/pages/docs/components/drawer.mdx
@@ -1,14 +1,17 @@
+# Drawer
+
+A drawer is a UI element that overlays on top of the current page. It is commonly used to display additional content or actions for the user.
+
 import { Container } from '@components/container'
-import { properties, DrawerExample } from '@examples/drawer'
+import { properties, DrawerExample } from '@components/examples/drawer'
 import { UnfoldVariants } from '@components/unfold-variants'
 import { ELEMENT_POSITION, ELEMENT_SIZES } from '@creation-ui/react'
 import { Drawer } from '@creation-ui/react'
 import PropsTable from '@components/props-table'
-import { ListOrTypes } from 'utils/list-or-types'
+import { ListOrTypes } from '@utils/list-or-types'
 
 export const list = ListOrTypes([...ELEMENT_POSITION])
 
-# Drawer
 
 ```tsx copy
 import { Drawer } from '@creation-ui/drawer'
