--- a/pages/docs/components/modal.mdx
+++ b/pages/docs/components/modal.mdx
@@ -1,10 +1,10 @@
 import { Container } from '@components/container'
-import { properties, ModalExample } from '@examples/modal'
+import { properties, ModalExample } from '@components/examples/modal'
 import { UnfoldVariants } from '@components/unfold-variants'
-import { ELEMENT_POSITION, ELEMENT_SIZES } from '@creation-ui/react'
+import { ELEMENT_POSITION } from '@creation-ui/react'
 import { Modal } from '@creation-ui/react'
 import PropsTable from '@components/props-table'
-import { ListOrTypes } from 'utils/list-or-types'
+import { ListOrTypes } from '@utils/list-or-types'
 
 export const list = ListOrTypes([...ELEMENT_POSITION])
 
