--- a/pages/docs/components/popover.mdx
+++ b/pages/docs/components/popover.mdx
@@ -1,5 +1,5 @@
 import { Container } from '@components/container'
-import { properties, PopoverExample } from '@examples/popover'
+import { properties, PopoverExample } from '@components/examples/popover'
 import { UnfoldVariants } from '@components/unfold-variants'
 import { ELEMENT_POSITION, ELEMENT_SIZES } from '@creation-ui/react'
 import PropsTable from '@components/props-table'
