--- a/pages/docs/components/progress-bar.mdx
+++ b/pages/docs/components/progress-bar.mdx
@@ -4,7 +4,7 @@ import {
   properties,
   ProgressBarExample,
   ProgressBarAnimatedExample,
-} from '@examples/progress-bar'
+} from '@components/examples/progress-bar'
 import { UnfoldVariants } from '@components/unfold-variants'
 import { ELEMENT_POSITION, ELEMENT_SIZES } from '@creation-ui/react'
 import PropsTable from '@components/props-table'
