--- a/pages/docs/components/tooltip.mdx
+++ b/pages/docs/components/tooltip.mdx
@@ -1,6 +1,6 @@
 import { Tooltip } from '@creation-ui/react'
 import { Container } from '@components/container'
-import { properties, TooltipExample } from '@examples/tooltip'
+import { properties, TooltipExample } from '@components/examples/tooltip'
 import { UnfoldVariants } from '@components/unfold-variants'
 import { ELEMENT_POSITION, ELEMENT_SIZES } from '@creation-ui/react'
 import PropsTable from '@components/props-table'
